<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DetailsActivity">

        <TextView
            android:id="@+id/movie_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7BCCB5"
            android:padding="16dp"
            android:textAlignment="viewStart"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/movie_title">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:contentDescription="@string/poster_of_movie"
                android:padding="16dp"
                android:scaleType="centerCrop" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/released_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:textAlignment="viewStart"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/fav_btn"
                    android:layout_width="150dp"
                    android:layout_height="75dp"
                    android:background="#7DFDFE"
                    android:onClick="saveDb"
                    android:text="@string/btn_label" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="#307D7E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/l1" />

        <ImageView
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_overview" />

        <TextView
            android:id="@+id/movie_Trailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="20dp"
            android:text="@string/trailer"
            android:textColor="#307D7E"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <ImageView
            android:id="@+id/video_image"
            android:layout_width="170dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginStart="64dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="270dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/play"
            android:onClick="playTrailer"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_Trailer" />

        <ImageView
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_image" />

        <TextView
            android:id="@+id/reviewLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/reviews"
            android:textColor="#307D7E"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/video_image"></TextView>

        <TextView
            android:id="@+id/reviewAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:text="@string/author"
            android:textColor="#307D7E"
            android:textSize="22sp"
            app:layout_constraintLeft_toLeftOf="@+id/review1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviewLabel">
        </TextView>

        <TextView
            android:id="@+id/review1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            android:textColor="#1d7892"
            android:textSize="22sp"
            app:layout_constraintLeft_toRightOf="@+id/reviewAuthor"
            app:layout_constraintTop_toBottomOf="@+id/reviewLabel">
        </TextView>

        <TextView
            android:id="@+id/review2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="16dp"
            android:paddingTop="20dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/review1">

        </TextView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

